<resources>
    <string name="app_name">Food Bridge</string>
    <string name="hey">Hey</string>
    <string name="donation">Where would you like to donate today?</string>
    <string name="anticipates_serving">anticipates serving</string>
    <string name="donate">Donate</string>
    <string name="upload_image">Upload Image</string>
    <string name="i_want_to_feed">I want to feed…</string>
    <string name="person_s">person(s)</string>
    <string name="_1">1</string>
    <string name="we_need_some_details">We need some details :)</string>
    <string name="send">Send</string>
    <string name="i_have">I have</string>
    <string name="mac_and_cheese">Mac and Cheese</string>
    <string name="some_more_details">Some more details...</string>
    <string name="freshly_prepared_contains_milk">Freshly prepared. Contains milk.</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="points_available">Points Available</string>
    <string name="next_5_reward">Next $5 reward</string>
    <string name="coupons_collected">Coupons Collected</string>
    <string name="_5_discount">$5 discount</string>
    <string name="domino_s">Domino\'s</string>
    <string name="target">Target</string>
</resources>