<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    android:paddingHorizontal="40dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_details"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/input_field_title"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/input_field_title"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/phone"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/input_field_title"
        app:layout_constraintTop_toBottomOf="@id/etAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/input_field_title"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/input_field_title"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnLogon"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
