<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/we_need_some_details"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_want_to_feed"
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="50dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:value="1.0"
                android:valueFrom="1.0"
                android:valueTo="50.0"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="36sp"
                android:layout_marginStart="140dp"
                app:layout_constraintTop_toBottomOf="@id/slider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/persons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_s"
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/number"
                app:layout_constraintBottom_toBottomOf="@id/number"
                app:layout_constraintStart_toEndOf="@id/number"/>

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have"
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/number"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/titleTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mac_and_cheese"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="18sp"
                android:textColorHint="#ccc"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_field_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            <TextView
                android:id="@+id/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some_more_details"
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/titleTextInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/descTextInput"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:maxLength="200"
                android:gravity="top|start"
                android:scrollbars="none"
                android:hint="@string/freshly_prepared_contains_milk"
                android:importantForAutofill="no"
                android:textColorHint="#ccc"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_field_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descText" />

            <ImageView
                android:id="@+id/ivImagePreview"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/food_placeholder"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descTextInput"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:textColor="#6FAB72"
                android:background="@drawable/rounded_button_white"
                app:layout_constraintTop_toBottomOf="@id/ivImagePreview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Predicted Rating: "
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/btnUpload"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4 (60 tokens)"
                android:textColor="#6FAB72"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:visibility="gone"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toBottomOf="@id/btnUpload"
                app:layout_constraintStart_toEndOf="@id/rating"
                android:layout_marginTop="25dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/insights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gathering insights on your donation using Groq. Sit tight..."
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/donate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:text="@string/send"
                android:enabled="false"
                android:alpha="0.4"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/insights"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
